tests/fixtures/invalid/actors/external_state_read.lby
# An actor's `state` is private: no external field read. -> L0354
actor Counter
    state
        count i64

    on inc
        count += 1

fn main -> i64
    let c Actor<Counter> = spawn Counter()
    let x i64 = c.count
    x
